GERONIMO-4027 Patch from Joe Leong. Thanks Joe! Accessibility issue: Tree icons in high contrast mode cannot be seen
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@665694 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/debugviews/debugviews-portlets/src/main/webapp/TreeDocIcon.css
+++ b/plugins/debugviews/debugviews-portlets/src/main/webapp/TreeDocIcon.css
@@ -14,12 +14,21 @@
 *   See the License for the specific language governing permissions and
 *   limitations under the License.
 ======================================================================*/
-@import url("../dojo/src/widget/templates/TreeDocIcon.css");
+
+/*
+File Not Used. The Widget Has Problems Referencing Using the templateCssPath
+
+@import url("http://localhost:8080/dojo/0.4/src/widget/templates/TreeDocIcon.css");
+
+.TreeIconDocument {
+	background-image: url(http://localhost:8080/debug-views/ico_filetree_16x16.gif);
+}
 
 .TreeExpandOpen .TreeIconFolder {
-    background-image: url('./images/ico_filetree_16x16.gif');
+	background-image: url(http://localhost:8080/debug-views/ico_filetree_16x16.gif);
 }
 
 .TreeExpandClosed .TreeIconFolder {
-    background-image: url('./images/ico_filetree_16x16.gif');
+	background-image: url(http://localhost:8080/debug-views/ico_filetree_16x16.gif);
 }
+*/
